--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chromium": "^3.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jimp": "^0.22.12",
     "mongoose": "^8.4.1",
     "patch-package": "^8.0.0",
     "venom-bot": "^5.1.0"
